--- a/style.css
+++ b/style.css
@@ -12,4 +12,62 @@
 
 /*---------------Font-size body 15px----------------*/
 
+/*-------------------Global Classes---------------------*/
 
+* {
+    box-sizing: border-box;
+    overflow: hidden;
+    
+}
+
+body {
+    background-color: whitesmoke;
+    width: 100%;
+    height: 100%;
+}
+
+main {
+    background-color: var(--VeryLight-Gray);
+    border: 1px solid black;
+    width: 85vw;
+    height: 80vh;
+    margin-left: 140px;
+    margin-top: 100px;
+    font-family: "Poppins", sans-serif;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    border: 1px solid black;
+    margin-left: 570px; 
+    margin-top: 75px; 
+}
+
+.section .section-headings span {
+    font-weight: 200;
+    font-size: 24px;
+    color: var(--VeryDark-Blue);
+}
+
+.section .section-headings h2 {
+    color: var(--VeryDark-Blue);
+    margin-top: -5px;
+}
+
+.section .section-description {
+    font-size: 15px;
+    color: var(--Grayish-Blue);
+    width: 510px;
+    text-align: center;
+    margin-top: -25px;
+}
+   
+
+.card-components {
+    position: absolute;
+    border: 1px solid black;
+    margin-top: 165px;
+}
