--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@
 
 /*---------------Font-size body 15px----------------*/
 
-/*-------------------Global Classes---------------------*/
-
 * {
     box-sizing: border-box;
     overflow: hidden;
@@ -21,18 +19,22 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background-image: linear-gradient(to right,#F5F7FA, #B8C6DB );
     width: 100%;
     height: 100%;
+    height: 1000px;
 }
+
+/*--------------------- Section component------------------------ */
 
 main {
     background-color: var(--VeryLight-Gray);
-    border: 1px solid black;
     width: 85vw;
     height: 80vh;
     margin-left: 140px;
     margin-top: 100px;
+    border-radius: 30px;
+    box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.24);
     font-family: "Poppins", sans-serif;
 }
 
@@ -41,7 +43,6 @@ main {
     flex-direction: column;
     align-items: center;
     position: absolute;
-    border: 1px solid black;
     margin-left: 570px; 
     margin-top: 75px; 
 }
@@ -64,10 +65,101 @@ main {
     text-align: center;
     margin-top: -25px;
 }
-   
+
+/*------------------------- Card components--------------------- */
 
 .card-components {
     position: absolute;
-    border: 1px solid black;
     margin-top: 165px;
+    display: flex;
+    font-size: 15px;
+    color: var(--Grayish-Blue);
+    height: 620px;
+    width: 1200px;
+    margin-left: 280px;
+    margin-top: 220px;
+}
+
+.card-components .card-supervisor {
+    border-top: 5px solid var(--Cyan);
+    width: 22rem;
+    height: 15rem;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow:rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.card-components .card-supervisor span {
+    font-weight: 600;
+    color: var(--VeryDark-Blue);
+}
+
+.card-components .card-team {
+    border-top: 5px solid var(--Red);
+    width: 22rem;
+    height: 15rem;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow:rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.card-components .card-team span {
+    font-weight: 600;
+    color: var(--VeryDark-Blue);
+}
+
+.card-components .card-karma {
+    border-top: 5px solid var(--Orange);
+    width: 22rem;
+    height: 15rem;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow:rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.card-components .card-karma span {
+    font-weight: 600;
+    color: var(--VeryDark-Blue);
+}
+
+.card-components .card-calculator {
+    border-top: 5px solid var(--Blue);
+    width: 22rem;
+    height: 15rem;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow:rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.card-components .card-calculator span {
+    font-weight: 600;
+    color: var(--VeryDark-Blue);
+}
+
+.card-components .card-column {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    gap: 35px;
+    margin-top: 20px;
+    margin-left: 370px;
+    padding-left: 11px;
+    height: 550px;
+    width: 380px;
+    
+}
+
+.card-components .card-row {
+    display: flex;
+    flex-direction: row;
+    margin-top: 150px;
+    gap: 390px;
+    height: 300px;
+    width: 1400px;
+    padding-left: 11px;
+}
+
+.card-components img {
+    margin-top: 15px;
+    margin-left: 220px;
 }
